# CurveQuantization

./: CMakeLists.txt  README.md  cq_basic_types.h  cq_interface.h  cq_internal.cpp  demo.cpp  gear.chart  gear_cq.chart
